chore: update RPC

--- a/packages/contracts/foundry.toml
+++ b/packages/contracts/foundry.toml
@@ -18,7 +18,7 @@ force = false
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
 
 [rpc_endpoints]
-mainnet = "https://eth.ubq.fi/v1/mainnet"
+mainnet = "https://rpc.ankr.com/eth"
 
 [profile.SMT.model_checker]
 contracts = { }
